# spaice-agent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md  bootstrap.sh  install.sh  pyproject.toml
reviews/: SUMMARY_2026-05-03.md  budget_codex_2026-05-03.md  buildguard_codex_2026-05-03-triage.md  buildguard_codex_2026-05-03.md  buildguard_final_codex_2026-05-03.md  config_codex_2026-05-03.md  db_store_codex_20260506.md  db_store_fixes_codex_20260506.md  db_store_spatial_codex_20260506.md  openrouter_client_codex_2026-05-03.md  phase-1a-capture_codex_2026-05-03.md  phase-1a-paths_codex_2026-05-03.md  phase-1a-recall_codex_2026-05-03.md  phase-1b-classify_codex_2026-05-03.md  phase-1b-mine_codex_2026-05-03.md  phase-1b-triage_codex_2026-05-03.md  phase1c_audit_codex53_2026-05-03.md  phase1c_audit_sonnet_2026-05-03.md  phase1c_codex53_triage_2026-05-03.md  phase1c_continuity_codex53_2026-05-03.md  phase1c_continuity_sonnet_2026-05-03.md  phase1c_dashboards_codex53_2026-05-03.md  phase1c_dashboards_sonnet_2026-05-03.md  phase1c_library_index_codex53_2026-05-03.md  phase1c_library_index_sonnet_2026-05-03.md  phase1c_summarise_codex53_2026-05-03.md  phase1c_summarise_sonnet_2026-05-03.md  phase1c_triage_2026-05-03.md  phase2ab_codex53_2026-05-03.md  phase2ab_codex53_fix_2026-05-03.md  phase2ab_codex53_triage_2026-05-03.md  triggers_codex_2026-05-03.md  vault_codex53_2026-05-03.md
scripts/: README.md  pre-push.sh
spaice_agent/: advisory.py  budget.py  cli.py  config.py  consensus.py  credentials.py  hook.py  ledger.py  memory_recall.py  memory_store.py  openrouter_client.py  orchestrator.py  search.py  triggers.py
spaice_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_advisory.py  test_audit_phase2b.py  test_budget.py  test_buildguard.py  test_buildguard_blockers.py  test_buildguard_schema.py  test_cli.py  test_config.py  test_consensus.py  test_credentials.py  test_hook.py  test_hook_buildguard.py  test_memory_recall.py  test_memory_store.py  test_openrouter_client.py  test_openrouter_logging.py  test_orchestrator.py  test_phase2b_cli_fixes.py  test_phase_1c.py  test_phase_1c_blockers.py  test_phase_1c_codex53.py  test_search.py  test_shim_cli_sync.py  test_tools.py  test_triggers.py  (+1 more)
(+48 files in other folders)
