[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spaice-agent"
version = "0.1.0"
description = "SPAICE Agent Framework — memory + search + consensus pre-turn middleware for Hermes-based agents"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [{name = "Jozef Doboš / SPAICE"}]
dependencies = [
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "portalocker>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "pyright>=1.1.350",
]

[project.scripts]
spaice-agent = "spaice_agent.cli:main"

[tool.setuptools.packages.find]
include = ["spaice_agent*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"spaice_agent.templates" = ["*.template", "*.yaml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
