[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spaice-agent"
version = "0.3.0"
description = "Persistent memory + continuity loop for Hermes-based AI agents — search-first recall, classified vault, session summarisation."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "SPAICE"}]
urls = {Homepage = "https://github.com/spaice-ai/spaice-agent", Repository = "https://github.com/spaice-ai/spaice-agent", Issues = "https://github.com/spaice-ai/spaice-agent/issues"}
dependencies = [
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "portalocker>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "pyright>=1.1.350",
]

[project.scripts]
spaice-agent = "spaice_agent.cli:main"

[tool.setuptools.packages.find]
include = ["spaice_agent*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"spaice_agent.templates" = ["*.template", "*.yaml"]
"spaice_agent.memory.templates" = ["*.template"]
"spaice_agent.bundled_skills" = ["**/*"]
"spaice_agent.packaging" = ["*.sh"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
